stylehomepage.css
@import url('https://fonts.googleapis.com/css?family=Indie+Flower');

body {
  margin: 0;
  padding: 0;
  background-color: black;
  background-attachment: fixed;
  background-size: cover;
}
#video-background {
  position: fixed;
  right: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  overflow: hidden;
  z-index: 0;
}
header {
  position: relative;
  background-color: black;
  height: 100vh;
  min-height: 25rem;
  width: 100%;
  overflow: hidden;
}

header .container {
  position: relative;
  z-index: 2;
}

header .overlay {
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: black;
  opacity: 0.5;
  z-index: 1;
}

#button {
  display: inline-block;
  background-color: rgba(999,999,999,5%);
  width: 50px;
  height: 50px;
  text-align: center;
  border-radius: 4px;
  margin: 30px;
  position: fixed;
  bottom: 30px;
  right: 30px;
  transition: background-color .3s;
  z-index: 1000;
}
#button:hover {
  cursor: pointer;
  background-color: rgba(0,0,0,0.6);
}
#button:active {
  background-color: #555;
}
#button::after {
  content: "\f077";
  font-family: FontAwesome;
  font-weight: normal;
  font-style: normal;
  font-size: 2em;
  line-height: 50px;
  color: #fff;
}

section#invitation {
  position: relative;
  background-color: rgba(0,0,0,10%);
  height: 10vh;
  min-height: 10rem;
  width: 100%;
}

section#invitation .container {
  position: relative;
  z-index: 2;
}

section#invitation .overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: black;
  opacity: 0.9;
  z-index: 1;
}

section#Latvia {
  background-color: rgba(0,0,0,10%);
  height: 50%;
  min-height: 10rem;
  max-width: 100%;
}

section#Latvia .container-fluid {
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: black;
  opacity: 0.9;
  z-index: 1;
}


section#Latvia img#RigaHome {
  border-radius:50%;
  border: 2px solid white;
  display: block;
  float: left;
  margin-right: 50px;
  margin-left: 50px;
  margin-top: 40px;
  width:240px;
  height:240px;
  overflow: visible;
}

section#Latvia img#RigaHome:hover {
  opacity: 0.3;
  transition: 0.3s ease;
}

section#Latvia #RigaText {
  position: relative;
  margin-left: 150px;
  padding-top: 40px;
  overflow: hidden;
}
@media only screen and (max-width:575px) {
  section#Latvia #RigaText{
    margin-left: 0px;
  }
}
section#Latvia #RigaLearnMore {
  position: relative;
  display: block;
  float: right;
  overflow: hidden;
}
section#Latvia a.Riga{
  color: green;
}

section#Latvia div#divider {
  position: relative;
  display:block;
  text-align: center;
  background-color: rgba(0,0,0,10%);
  width: 100%;
  height:auto;
}

section#Latvia img#divider {
  margin:0;
  width:50%;
  opacity:0.1;
}
section#France {
  background-color: rgba(0,0,0,10%);
  height: 50%;
  min-height: 10rem;
  max-width: 100%;
}

section#France .container-fluid {
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: black;
  opacity: 0.9;
  z-index: 1;
}


section#France img#LyonHome {
  border-radius:50%;
  border: 2px solid white;
  display: block;
  float: left;
  margin-right: 50px;
  margin-left: 50px;
  margin-top: 40px;
  width:240px;
  height:240px;
  overflow: visible;
}

section#France img#LyonHome:hover {
  opacity: 0.3;
  transition: 0.3s ease;
}

section#France #LyonText {
  position: relative;
  margin-left: 150px;
  padding-top: 40px;
  overflow: hidden;
}
@media only screen and (max-width:575px) {
  section#France #LyonText{
    margin-left: 0px;
  }
}
section#France #LyonLearnMore {
  position: relative;
  display: block;
  float: right;
  overflow: hidden;
}
section#France a.Lyon{
  color: green;
}
section#France div#divider {
  position: relative;
  display:block;
  text-align: center;
  background-color: rgba(0,0,0,10%);
  width: 100%;
  height:auto;
}

section#France img#divider {
margin:0;
width:50%;
opacity:0.1;
}
section#Peru {
  background-color: rgba(0,0,0,10%);
  height: 50%;
  min-height: 10rem;
  max-width: 100%;
}

section#Peru .container-fluid {
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: black;
  opacity: 0.9;
  z-index: 1;
}

section#Peru img#CuscoHome {
  border-radius:50%;
  border: 2px solid white;
  display: block;
  float: left;
  margin-right: 50px;
  margin-left: 50px;
  margin-top: 40px;
  width:240px;
  height:240px;
  overflow: visible;
}

section#Peru img#CuscoHome:hover {
  opacity: 0.3;
  transition: 0.3s ease;
}

section#Peru #CuscoText {
  position: relative;
  margin-left: 150px;
  padding-top: 40px;
  overflow: hidden;
}
@media only screen and (max-width:575px) {
  section#Peru #CuscoText{
    margin-left: 0px;
  }
}
section#Peru #CuscoLearnMore {
  position: relative;
  display: block;
  float: right;
  overflow: hidden;
}
section#Peru a.Cusco{
  color: green;
}
section#Peru div#divider {
  position: relative;
  display:block;
  text-align: center;
  background-color: rgba(0,0,0,10%);
  width: 100%;
  height:auto;
}

section#Peru img#divider {
margin:0;
width:50%;
opacity:0.1;
}

section#footer {
  background-color: rgba(0,0,0,10%);
  height: 50%;
  min-height: 10rem;
  max-width: 100%;
}

section#footer .container-fluid {
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: black;
  opacity: 0.99;
  z-index: 0;
}

footer dl.Authors{
  position: relative;
  display: block;
  float:left;
  padding-top: 20px;
  overflow: hidden;
  color:white;
  z-index: 2;
}

footer dd.Authors{
  position: relative;
  margin-left: 70px;
  color: rgb(999,999,999);
  z-index: 100;

}
footer dl.Thanks{
  position: relative;
  display: block;
  float:left;
  margin-left: 200px;
  padding-top: 20px;
  overflow: hidden;
}

footer dd.Thanks{
  position: relative;
  margin-left: 70px;
  color: rgba(999,999,999,0.8);
  z-index: 2;
}
footer dl.FindUs{
  position: relative;
  display: block;
  margin-left: 800px;
  padding-top: 20px;
  overflow: hidden;
}

footer dd.FindUs{
  position: relative;
  margin-left: 70px;
  color: rgba(999,999,999,0.8);
  z-index: 2;
}
#mainNav {
  position:fixed;
    border-bottom: 2px solid grey;
    background-color: rgba(999,999,999, 30%);
    top:0;
    width: 100%;
    margin: 0px;
    font-family: 'Indie Flower';
    transition: top 0.1s;
}

#navbarResponsive {
    font-size: 20px;
    padding: 4px 1px 4px 1px;
    font-family: 'Indie Flower';
}

.navbar-brand {
  font-size: 35px;
  padding: 15px 1px 4px 1px;
  font-weight: bold;
  font-family: 'Indie Flower';

}

div {
  display: block;
}

h1 {
  font-size: 40px;
  font-family: 'Indie Flower';
  color: white;
  font-weight: lighter;
}

ul {
  list-style: circle;
  color: white;
}

h2{
  font-family: 'Indie Flower';
  font-size: 30px;
  color: white;
  font-weight: lighter;
}
h3{
  font-family: 'Indie Flower';
  font-size: 30px;
  color: white;
  text-align: right;
  font-weight: lighter;
}

h5{
  font-size: 15px;
  font-family: "Indie Flower";
  color: white;
}

